@@ -1,3 +1,8 @@
+Wed Nov  2 07:34:27 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* numeric.c (rb_num_coerce_bit): enable bit operations with
+	  coercing by non-integer object.  [ruby-core:77783] [Bug #12875]
+
 Tue Nov  1 01:31:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (ac_cv_func_round): round(3) in x86_64-w64-mingw32
